<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificationLandingPage">

    <TextView
        android:id="@+id/VerifyLabel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/type_your_verification_code_here2"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/verficationStart"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_below="@+id/VerifyLabel"
        android:layout_marginTop="15dp"
        android:layout_marginStart="28dp"
        android:autofillHints=""
        android:gravity="end"
        android:inputType="none"
        android:text="@string/mh"
        android:textAlignment="viewEnd" />


    <EditText
        android:id="@+id/VerifyNumber"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_below="@+id/VerifyLabel"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="73dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:inputType="phone"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/verifybutton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/VerifyNumber"
        android:layout_marginStart="150dp"

        android:layout_marginTop="50dp"
        android:background="#00D5FF"
        android:gravity="center"
        android:textStyle="bold
"
        android:text="@string/verify"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/SendCodeAgain"
        android:layout_width="135dp"
        android:layout_height="43dp"
        android:layout_below="@+id/verifybutton"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="230dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="346dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:text="Send Code Again"
        android:textAlignment="center"
        android:textColor="#0055FF" />

</RelativeLayout>